working on mockUp user search container

--- a/prject-cny/project-cny/layout/index.html
+++ b/prject-cny/project-cny/layout/index.html
@@ -29,10 +29,12 @@
       </header>
       <main>
         <div class="user-search">
-          <div class="user-search-header">
-            <h1></h1>｀
+          <div class="user-search-header"></div>
+          <div class="user-search-sub-header"></div>
+          <div class="user-search-input-container">
+            <input type="text">
+            <img src="" alt="user-search-button-magnifier">
           </div>
-          
         </div>
         <div class="map-container">
           <div id="map"></div>
