--- a/projekt-cny/projekt-cny/layout/style.css
+++ b/projekt-cny/projekt-cny/layout/style.css
@@ -1,11 +1,3 @@
-/* * {
-    box-sizing: border-box;
-}
-
-*, body {
-    margin: 0;
-    padding: 0;
-} */
 /* meyer css reset start */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -146,6 +138,7 @@ table {
 
 .user-search-input-container input {
     width: 100%;
+    background-color: white;
     outline: none;
     border: none;
 }
