--- a/projekt-cny/projekt-cny/src/App.css
+++ b/projekt-cny/projekt-cny/src/App.css
@@ -103,7 +103,7 @@ table {
 .user-search-container {
     width: 600px;
     position: absolute;
-    z-index: 2;
+    z-index: 5;
     top: 250px;
     left: 25px;
     background-color: white;
@@ -174,18 +174,14 @@ table {
 
 .map-container {
     position: fixed;
-    z-index: -1;
+    z-index: 2;
     bottom: 0;
     /* background-image: url('./maps_mockUP.png'); */
     background-size: cover;
     height: calc(100% - 110px);
     /* height: 500px; */
     width: 100%;
-    /* filter: grayscale(100%); */
-}
-
-#map {
-    height: 100%;
+    filter: grayscale(100%);
 }
 
 .material-symbols-outlined {
