--- a/projekt-cny/projekt-cny/src/App.css
+++ b/projekt-cny/projekt-cny/src/App.css
@@ -1,46 +1,127 @@
 /* meyer css reset start */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font-family: "Noto Sans", sans-serif;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-family: "Noto Sans", sans-serif;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /* mayer css reset end */
 
@@ -49,145 +130,152 @@ table {
 } */
 
 .header-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .announcement {
-    display: flex;
-    height: 35px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
+  display: flex;
+  height: 35px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
 
 .announcement a {
-    font-size: 15px;
-    text-decoration: none;
-    color: white;
+  font-size: 15px;
+  text-decoration: none;
+  color: white;
 }
 
 .announcement a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .main-header {
-    height: 75px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0px 60px;
-    background-color: grey;
-    font-size: 20px;
+  height: 75px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0px 60px;
+  background-color: grey;
+  font-size: 20px;
 }
 
 .main-logo {
-    font-weight: 900;
-    text-decoration: none;
-    color: black;
+  font-weight: 900;
+  text-decoration: none;
+  color: black;
 }
 
 .main-tutorial {
-    text-decoration: none;
-    color: black;
-    margin-left: 10%;
+  text-decoration: none;
+  color: black;
+  margin-left: 10%;
 }
 
 .menu-container {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .user-search-container {
-    width: 600px;
-    position: absolute;
-    z-index: 5;
-    top: 250px;
-    left: 25px;
-    background-color: white;
-    border-radius: 25px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 40px;
+  width: 600px;
+  position: absolute;
+  z-index: 5;
+  top: 250px;
+  left: 25px;
+  background-color: white;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 40px;
 }
 
 .user-search-title-container {
-    padding: 30px;
+  padding: 30px;
 }
 
 .user-search-title-container h3 {
-    font-weight: 700;
-    font-size: 2rem;
+  font-weight: 700;
+  font-size: 2rem;
 }
 
 .user-search-title-container h4 {
-    font-weight: 400;
-    font-size: 1rem;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 .user-search-input-container {
-    padding: 0 2%;
-    height: 52px;
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 15px;
-    outline: 2px solid black;
+  padding: 0 2%;
+  height: 52px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 15px;
+  outline: 2px solid black;
 }
 
 .user-search-input-container input {
-    width: 100%;
-    background-color: white;
-    outline: none;
-    border: none;
+  width: 100%;
+  background-color: white;
+  color: black;
+  outline: none;
+  border: none;
 }
 
 .user-search-neighborhood-container {
-    width: 550px;
-    display: flex;
-    padding: 20px;
-    justify-content: space-between;
-    align-items: center;
-    background-color: black;
-    border-radius: 15px;
+  width: 550px;
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: black;
+  border-radius: 15px;
 }
 
 .user-search-neighborhood-container {
-    margin-top: 25px;
+  margin-top: 25px;
 }
 
 .user-search-neighborhood-container h4 {
-    color: white;
-    font-size: 1.2rem;
+  color: white;
+  font-size: 1.2rem;
 }
 
 .user-search-neighborhood-container p {
-    color: grey;
-    font-size: 0.8rem;
+  color: grey;
+  font-size: 0.8rem;
 }
 
 .user-search-neighborhood-container-text-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.user-search-result-container {
+  width: 30%;
+  height: calc(100% - 110px);
+  bottom: 0px;
+  position: absolute;
+  z-index: 10;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 40px;
 }
 
 .map-container {
-    position: fixed;
-    z-index: 2;
-    bottom: 0;
-    /* background-image: url('./maps_mockUP.png'); */
-    background-size: cover;
-    height: calc(100% - 110px);
-    /* height: 500px; */
-    width: 100%;
-    filter: grayscale(100%);
+  position: fixed;
+  z-index: 2;
+  bottom: 0;
+  /* background-image: url('./maps_mockUP.png'); */
+  background-size: cover;
+  /* height: 500px; */
+  height: calc(100% - 110px);
+  width: 100%;
+  filter: grayscale(100%);
 }
 
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 500,
-  'GRAD' 200,
-  'opsz' 40
+  font-variation-settings: "FILL" 0, "wght" 500, "GRAD" 200, "opsz" 40;
 }
